# ASP

./: README.md
asm_complex/complex_nums/: Cargo.toml  ReadMe.md  build.rs  wrapper.h
asm_complex/complex_nums/complex_numbers/: complex.c  complex.h
asm_complex/complex_nums/src/: lib.rs
asm_complex/complex_nums_wrapper/: Cargo.toml
asm_complex/complex_nums_wrapper/src/: lib.rs
asm_complex/rtic_asm_complex/: Cargo.toml  memory.x
asm_complex/rtic_asm_complex/src/: fft.rs  filter.rs  main.rs  vad.rs  vad_utils.rs
rtic_cmsis/: Cargo.toml
rtic_cmsis/src/: fft.rs  filter.rs  main.rs  my_cmsis_complex.rs  vad.rs  vad_utils.rs
rtic_num_complex/: Cargo.toml
rtic_num_complex/.cargo/: config.toml
rtic_num_complex/src/: fft.rs  main.rs  vad.rs  vad_utils.rs
